--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h3> DAA - ON DUTY - CERTIFICATE </h3>
         </header>
         <main >
-          <form action="./pdf.php" method="post" autocomplete="off">
+          <form action="prep.php" method="post" autocomplete="off">
             <div class="form-item box-item">
               <input type="text" name="Name" placeholder="Name*" value=""
               required="" />
